--- a/home.html
+++ b/home.html
@@ -4,27 +4,41 @@
                         <meta charset="UTF-8">
                         <meta http-equiv="X-UA-Compatible" content="IE=edge">
                         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                        <title>Document</title>
+                        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+                        <link rel="stylesheet" type="text/css" href="styles.css">
+                        <title>Team Tracker</title>
                     </head>
-                    <body>
-                    <div class="employee">
-                        <h1>name: Yogi Berra</h1>
-                        <h2>role: Manager</h2>
-                        <p>id: 12345</p>
-                        <p>email: <a href="mailto:yogi@gmail.com">yogi@gmail.com</a></p>
-                    <p>office number: 615</p>
-                        <div class="employee">
-                        <h1>name: Sam</h1>
-                        <h2>role: Engineer</h2>
-                        <p>id: 444</p>
-                        <p>email: <a href="mailto:sam@gmail.com">sam@gmail.com</a></p>
+                    <body class="card-columns">
+                    <div class="card row mx-auto" style="width: 200px">
+                        <div class="card-header">
+                        Manager
+                        </div>
+                        <div class="card-body">
+                        <h1>Name: Yogi Berra</h1>
+                        <p>ID: 1111</p>
+                        <p>Email: <a href="mailto:yogi@gmail.com">yogi@gmail.com</a></p>
+                    <p>Office Number: 615</p>
+                        </div>
+                        </div><div class="card row mx-auto" style="width: 200px">
+                        <div class="card-header">
+                        Engineer
+                        </div>
+                        <div class="card-body">
+                        <h1>Name: Sam</h1>
+                        <p>ID: 2222</p>
+                        <p>Email: <a href="mailto:sam@gmail.com">sam@gmail.com</a></p>
                     <p>github: <a href="GitHubUser">GitHubUser</a></p>
-                        <div class="employee">
-                        <h1>name: Wally</h1>
-                        <h2>role: Intern</h2>
-                        <p>id: 222</p>
-                        <p>email: <a href="mailto:wally@gmail.com">wally@gmail.com</a></p>
-                    <p>school: nunya business school</p>
+                        </div>
+                        </div><div class="card row mx-auto" style="width: 200px">
+                        <div class="card-header">
+                        Intern
+                        </div>
+                        <div class="card-body">
+                        <h1>Name: Wally</h1>
+                        <p>ID: 3333</p>
+                        <p>Email: <a href="mailto:wally@gmail.com">wally@gmail.com</a></p>
+                    <p>School: Nunya School of Bidness</p>
+                        </div>
                         </div>
                         </body>
                     </html>
