updated readme with video

--- a/home.html
+++ b/home.html
@@ -24,9 +24,9 @@
                         Engineer
                         </div>
                         <div class="card-body">
-                        <h1>Name: Sam</h1>
-                        <p>ID: 2222</p>
-                        <p>Email: <a href="mailto:sam@gmail.com">sam@gmail.com</a></p>
+                        <h1>Name: Sal</h1>
+                        <p>ID: 3333</p>
+                        <p>Email: <a href="mailto:sal@gmail.com">sal@gmail.com</a></p>
                     <p>github: <a href="GitHubUser">GitHubUser</a></p>
                         </div>
                         </div><div class="card row mx-auto" style="width: 200px">
@@ -35,9 +35,9 @@
                         </div>
                         <div class="card-body">
                         <h1>Name: Wally</h1>
-                        <p>ID: 3333</p>
+                        <p>ID: 4444</p>
                         <p>Email: <a href="mailto:wally@gmail.com">wally@gmail.com</a></p>
-                    <p>School: Nunya School of Bidness</p>
+                    <p>School: Nunya Bidness</p>
                         </div>
                         </div>
                         </body>
